--- a/public/cart.html
+++ b/public/cart.html
@@ -17,7 +17,6 @@
     <script defer src="/__/firebase/9.15.0/firebase-performance-compat.js"></script>
     <script defer src="/__/firebase/init.js?useEmulator=true"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
-    <script type="text/javascript" src="js/script.js"></script>
     <script src="/__/firebase/7.14.5/firebase-app.js"></script>
     <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
@@ -48,24 +47,30 @@
         </div>
 
         <div class="row" style="width: 100%;margin-top: 1%;">
-            <div class="col-sm-10 col-10 offset-sm-1 offset-1 bg-white">
-                <H3 style="text-align: center;">TOTAL AMOUNT</H3>
-                <div id="result"></div>
+            <div class="col-sm-6 col-6 offset-sm-3 offset-3 bg-white">
+                <H3 style="text-align: center;">YOUR CART</H3>
+                <div id="result" style="text-align: center;"></div>
             </div>
         </div>
 
 
         <div class="row" style="width: 100%;">
-            <div class="col-sm-9 col-7 offset-sm-1 offset-1 bg-white"></div>
+            <div class="col-sm-4 col-0 offset-sm-3 offset-3 bg-white"></div>
+            <div class="col-sm-1 col-3 offset-sm-0 offset-3 bg-white">
+                <a class="btn btn-danger" id="reset">reset cart</a>
+            </div>
             <div class="col-sm-1 col-3 bg-white">
-                <a class="btn btn-primary">pay all</a>
+                <a class="btn btn-success" id="pay">pay for all</a>
             </div>
         </div>
         
+        <div class="row" style="width: 100%;">
+            <div class="col-sm-6 col-6 offset-sm-3 offset-3 bg-white" style="height: 15px;">
+            </div>
+        </div>
 
 
-
-        <div class="row" style="margin-top: 32%;">
+        <div class="row" style="margin-top: 31%;">
             <div class="col-12 bg-dark text-center text-white" style="margin-top: 3%;">
                 copyright © 2023
             </div>
@@ -77,7 +82,7 @@
     <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
-    <script type="text/javascript" src="js/script.js"></script>
-    
-  </body>
+
+
+</body>
 </html>
