final css changes

--- a/public/cart.html
+++ b/public/cart.html
@@ -48,7 +48,7 @@
 
         <div class="row" style="width: 100%;margin-top: 1%;">
             <div class="col-sm-6 col-6 offset-sm-3 offset-3 bg-white">
-                <H3 style="text-align: center;">YOUR CART</H3>
+                <H3 style="text-align: center;margin-top: 15%; color: blue;">YOUR CART</H3>
                 <div id="result" style="text-align: center;"></div>
             </div>
         </div>
@@ -70,8 +70,8 @@
         </div>
 
 
-        <div class="row" style="margin-top: 31%;">
-            <div class="col-12 bg-dark text-center text-white" style="margin-top: 3%;">
+        <div class="row" id="foot" >
+            <div class="col-12 bg-dark text-center text-white" style="margin-top: 3%;" >
                 copyright © 2023
             </div>
         </div>
