--- a/public/shop.html
+++ b/public/shop.html
@@ -68,7 +68,7 @@
                 <img class="item_img" src="pictures/man shirt.jpg" alt="man shirt">
                 <h2 style="text-align: center;" id="item3">Elegant shirt</h2>
                 <p class="price">$<label id="price3">15.99</label></p>
-                <p>Attracts women to you</p>
+                <p>Attracts women</p>
                 <p><a class="btn btn-primary" id="3">Add to Cart</a><label id="pop3" style="visibility: hidden;" >+1</label></p>
             </div>
             <div class="card col-sm-2 col-5">
@@ -96,7 +96,7 @@
                 <img class="item_img" src="pictures/women dress.webp" alt="women dress">
                 <h2 style="text-align: center;" id="item6">Mini dress</h2>
                 <p class="price">$<label id="price6">50.00</label></p>
-                <p>Catching kisses and winks </p>
+                <p>Catching kisses</p>
                 <p><a class="btn btn-primary" id="6">Add to Cart</a><label id="pop6" style="visibility: hidden;" >+1</label></p>
             </div>
             <div class="card col-sm-2 col-5">
